--- a/ui/MainWindowRoomManagement.ui
+++ b/ui/MainWindowRoomManagement.ui
@@ -46,12 +46,12 @@
             <property name="title">
              <string>Detail Info</string>
             </property>
-            <widget class="QLineEdit" name="lineEdit_5">
+            <widget class="QLineEdit" name="lineEdit_Roomstatus">
              <property name="geometry">
               <rect>
-               <x>140</x>
+               <x>150</x>
                <y>50</y>
-               <width>231</width>
+               <width>221</width>
                <height>21</height>
               </rect>
              </property>
@@ -78,12 +78,12 @@
               <string>Room Status:</string>
              </property>
             </widget>
-            <widget class="QLineEdit" name="lineEdit_6">
+            <widget class="QLineEdit" name="lineEdit_Customer">
              <property name="geometry">
               <rect>
-               <x>140</x>
+               <x>150</x>
                <y>90</y>
-               <width>231</width>
+               <width>221</width>
                <height>21</height>
               </rect>
              </property>
@@ -110,12 +110,12 @@
               <string>Customer:</string>
              </property>
             </widget>
-            <widget class="QLineEdit" name="lineEdit_7">
+            <widget class="QLineEdit" name="lineEdit_Bookingcode">
              <property name="geometry">
               <rect>
-               <x>140</x>
-               <y>130</y>
-               <width>231</width>
+               <x>150</x>
+               <y>140</y>
+               <width>221</width>
                <height>21</height>
               </rect>
              </property>
@@ -124,8 +124,8 @@
              <property name="geometry">
               <rect>
                <x>10</x>
-               <y>120</y>
-               <width>121</width>
+               <y>130</y>
+               <width>141</width>
                <height>31</height>
               </rect>
              </property>
@@ -139,25 +139,15 @@
               </font>
              </property>
              <property name="text">
-              <string>Code:</string>
-             </property>
-            </widget>
-            <widget class="QLineEdit" name="lineEdit_8">
-             <property name="geometry">
-              <rect>
-               <x>140</x>
-               <y>170</y>
-               <width>231</width>
-               <height>21</height>
-              </rect>
+              <string>Booking code:</string>
              </property>
             </widget>
             <widget class="QLabel" name="label_9">
              <property name="geometry">
               <rect>
                <x>10</x>
-               <y>160</y>
-               <width>121</width>
+               <y>180</y>
+               <width>141</width>
                <height>31</height>
               </rect>
              </property>
@@ -174,21 +164,11 @@
               <string>Check in:</string>
              </property>
             </widget>
-            <widget class="QLineEdit" name="lineEdit_9">
-             <property name="geometry">
-              <rect>
-               <x>140</x>
-               <y>210</y>
-               <width>231</width>
-               <height>21</height>
-              </rect>
-             </property>
-            </widget>
             <widget class="QLabel" name="label_10">
              <property name="geometry">
               <rect>
                <x>10</x>
-               <y>200</y>
+               <y>240</y>
                <width>121</width>
                <height>31</height>
               </rect>
@@ -206,6 +186,52 @@
               <string>Check out:</string>
              </property>
             </widget>
+            <widget class="QDateTimeEdit" name="dateTimeEdit_checkin">
+             <property name="geometry">
+              <rect>
+               <x>130</x>
+               <y>180</y>
+               <width>241</width>
+               <height>31</height>
+              </rect>
+             </property>
+            </widget>
+            <widget class="QDateTimeEdit" name="dateTimeEdit_checkout">
+             <property name="geometry">
+              <rect>
+               <x>130</x>
+               <y>240</y>
+               <width>241</width>
+               <height>31</height>
+              </rect>
+             </property>
+            </widget>
+            <widget class="QPushButton" name="pushButton_save">
+             <property name="geometry">
+              <rect>
+               <x>40</x>
+               <y>300</y>
+               <width>131</width>
+               <height>41</height>
+              </rect>
+             </property>
+             <property name="text">
+              <string>Save</string>
+             </property>
+            </widget>
+            <widget class="QPushButton" name="pushButton_clear">
+             <property name="geometry">
+              <rect>
+               <x>200</x>
+               <y>300</y>
+               <width>131</width>
+               <height>41</height>
+              </rect>
+             </property>
+             <property name="text">
+              <string>Clear</string>
+             </property>
+            </widget>
            </widget>
           </item>
           <item>
@@ -213,26 +239,173 @@
             <property name="maximumSize">
              <size>
               <width>16777215</width>
-              <height>100</height>
+              <height>150</height>
              </size>
             </property>
             <property name="title">
-             <string>Check Room</string>
+             <string>Sort Room</string>
             </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QGroupBox" name="groupBox_5">
-            <property name="title">
-             <string>GroupBox</string>
-            </property>
+            <widget class="QPushButton" name="pushButton_Sortvip">
+             <property name="geometry">
+              <rect>
+               <x>30</x>
+               <y>40</y>
+               <width>131</width>
+               <height>41</height>
+              </rect>
+             </property>
+             <property name="text">
+              <string>VIP</string>
+             </property>
+            </widget>
+            <widget class="QPushButton" name="pushButton_Sortregular">
+             <property name="geometry">
+              <rect>
+               <x>210</x>
+               <y>40</y>
+               <width>131</width>
+               <height>41</height>
+              </rect>
+             </property>
+             <property name="text">
+              <string>Regular</string>
+             </property>
+            </widget>
+            <widget class="QPushButton" name="pushButton_Sortinhouse">
+             <property name="geometry">
+              <rect>
+               <x>30</x>
+               <y>100</y>
+               <width>131</width>
+               <height>41</height>
+              </rect>
+             </property>
+             <property name="text">
+              <string>In House</string>
+             </property>
+            </widget>
+            <widget class="QPushButton" name="pushButton_Sortready">
+             <property name="geometry">
+              <rect>
+               <x>210</x>
+               <y>100</y>
+               <width>131</width>
+               <height>41</height>
+              </rect>
+             </property>
+             <property name="text">
+              <string>Ready</string>
+             </property>
+            </widget>
            </widget>
           </item>
           <item>
            <widget class="QGroupBox" name="groupBox_4">
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>200</height>
+             </size>
+            </property>
             <property name="title">
              <string>Statictics</string>
             </property>
+            <widget class="QLabel" name="label_4">
+             <property name="geometry">
+              <rect>
+               <x>10</x>
+               <y>40</y>
+               <width>141</width>
+               <height>31</height>
+              </rect>
+             </property>
+             <property name="font">
+              <font>
+               <family>#9Slide03 SFU Toledo Bold</family>
+               <pointsize>16</pointsize>
+               <weight>9</weight>
+               <italic>false</italic>
+               <bold>false</bold>
+              </font>
+             </property>
+             <property name="text">
+              <string>Booked rooms:</string>
+             </property>
+            </widget>
+            <widget class="QLineEdit" name="lineEdit_Bookedrooms">
+             <property name="geometry">
+              <rect>
+               <x>170</x>
+               <y>50</y>
+               <width>191</width>
+               <height>21</height>
+              </rect>
+             </property>
+            </widget>
+            <widget class="QLineEdit" name="lineEdit_Vacancy">
+             <property name="geometry">
+              <rect>
+               <x>170</x>
+               <y>90</y>
+               <width>191</width>
+               <height>21</height>
+              </rect>
+             </property>
+            </widget>
+            <widget class="QLabel" name="label_11">
+             <property name="geometry">
+              <rect>
+               <x>10</x>
+               <y>80</y>
+               <width>141</width>
+               <height>31</height>
+              </rect>
+             </property>
+             <property name="font">
+              <font>
+               <family>#9Slide03 SFU Toledo Bold</family>
+               <pointsize>16</pointsize>
+               <weight>9</weight>
+               <italic>false</italic>
+               <bold>false</bold>
+              </font>
+             </property>
+             <property name="text">
+              <string>Vancancy:</string>
+             </property>
+            </widget>
+            <widget class="QLineEdit" name="lineEdit_Totalcustomers">
+             <property name="geometry">
+              <rect>
+               <x>170</x>
+               <y>130</y>
+               <width>191</width>
+               <height>21</height>
+              </rect>
+             </property>
+            </widget>
+            <widget class="QLabel" name="label_12">
+             <property name="geometry">
+              <rect>
+               <x>10</x>
+               <y>120</y>
+               <width>181</width>
+               <height>31</height>
+              </rect>
+             </property>
+             <property name="font">
+              <font>
+               <family>#9Slide03 SFU Toledo Bold</family>
+               <pointsize>16</pointsize>
+               <weight>9</weight>
+               <italic>false</italic>
+               <bold>false</bold>
+              </font>
+             </property>
+             <property name="text">
+              <string>Total customers:</string>
+             </property>
+            </widget>
            </widget>
           </item>
          </layout>
@@ -272,6 +445,136 @@ color: rgb(255, 215, 0);</string>
        </widget>
       </item>
       <item>
+       <widget class="QGroupBox" name="groupBox_6">
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>50</height>
+         </size>
+        </property>
+        <property name="font">
+         <font>
+          <family>#9Slide03 SFU Toledo Bold</family>
+          <pointsize>8</pointsize>
+          <weight>9</weight>
+          <italic>false</italic>
+          <bold>false</bold>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">font: 75 8pt &quot;#9Slide03 SFU Toledo Bold&quot;;</string>
+        </property>
+        <property name="title">
+         <string>Status</string>
+        </property>
+        <widget class="QLabel" name="label_2">
+         <property name="geometry">
+          <rect>
+           <x>140</x>
+           <y>20</y>
+           <width>51</width>
+           <height>21</height>
+          </rect>
+         </property>
+         <property name="font">
+          <font>
+           <family>#9Slide03 SFU Toledo Bold</family>
+           <pointsize>8</pointsize>
+           <weight>9</weight>
+           <italic>false</italic>
+           <bold>false</bold>
+          </font>
+         </property>
+         <property name="text">
+          <string>In House</string>
+         </property>
+        </widget>
+        <widget class="QLineEdit" name="lineEdit">
+         <property name="geometry">
+          <rect>
+           <x>110</x>
+           <y>19</y>
+           <width>21</width>
+           <height>21</height>
+          </rect>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(255, 0, 0);</string>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_3">
+         <property name="geometry">
+          <rect>
+           <x>300</x>
+           <y>20</y>
+           <width>51</width>
+           <height>21</height>
+          </rect>
+         </property>
+         <property name="font">
+          <font>
+           <family>#9Slide03 SFU Toledo Bold</family>
+           <pointsize>8</pointsize>
+           <weight>9</weight>
+           <italic>false</italic>
+           <bold>false</bold>
+          </font>
+         </property>
+         <property name="text">
+          <string>Ready</string>
+         </property>
+        </widget>
+        <widget class="QLineEdit" name="lineEdit_2">
+         <property name="geometry">
+          <rect>
+           <x>270</x>
+           <y>19</y>
+           <width>21</width>
+           <height>21</height>
+          </rect>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(0, 255, 127);</string>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_5">
+         <property name="geometry">
+          <rect>
+           <x>450</x>
+           <y>20</y>
+           <width>51</width>
+           <height>21</height>
+          </rect>
+         </property>
+         <property name="font">
+          <font>
+           <family>#9Slide03 SFU Toledo Bold</family>
+           <pointsize>8</pointsize>
+           <weight>9</weight>
+           <italic>false</italic>
+           <bold>false</bold>
+          </font>
+         </property>
+         <property name="text">
+          <string>Cleaning</string>
+         </property>
+        </widget>
+        <widget class="QLineEdit" name="lineEdit_4">
+         <property name="geometry">
+          <rect>
+           <x>420</x>
+           <y>19</y>
+           <width>21</width>
+           <height>21</height>
+          </rect>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(255, 170, 0);</string>
+         </property>
+        </widget>
+       </widget>
+      </item>
+      <item>
        <widget class="QCalendarWidget" name="calendarWidget">
         <property name="maximumSize">
          <size>
@@ -285,7 +588,7 @@ color: rgb(255, 215, 0);</string>
        </widget>
       </item>
       <item>
-       <widget class="QTableWidget" name="tableWidget">
+       <widget class="QTableWidget" name="tableRooms">
         <property name="maximumSize">
          <size>
           <width>16777215</width>
@@ -601,28 +904,28 @@ color: rgb(255, 215, 0);</string>
           <widget class="QFrame" name="gridFrame">
            <layout class="QGridLayout" name="gridLayout">
             <item row="0" column="1">
-             <widget class="QPushButton" name="pushButton_3">
+             <widget class="QPushButton" name="pushButton_checkin">
               <property name="text">
                <string>Check in</string>
               </property>
              </widget>
             </item>
             <item row="0" column="2">
-             <widget class="QPushButton" name="pushButton_5">
+             <widget class="QPushButton" name="pushButton_checkout">
               <property name="text">
                <string>Check out</string>
               </property>
              </widget>
             </item>
             <item row="1" column="2">
-             <widget class="QPushButton" name="pushButton_6">
+             <widget class="QPushButton" name="pushButton_close">
               <property name="text">
                <string>Close</string>
               </property>
              </widget>
             </item>
             <item row="1" column="1">
-             <widget class="QPushButton" name="pushButton_2">
+             <widget class="QPushButton" name="pushButton_update">
               <property name="text">
                <string>Update</string>
               </property>
