--- a/ui/MainWindowRoomManagement.ui
+++ b/ui/MainWindowRoomManagement.ui
@@ -922,6 +922,16 @@ color: rgb(255, 215, 0);</string>
               <property name="text">
                <string>Close</string>
               </property>
+              <property name="icon">
+               <iconset>
+                <normaloff>../images/close_red.webp</normaloff>../images/close_red.webp</iconset>
+              </property>
+              <property name="iconSize">
+               <size>
+                <width>40</width>
+                <height>40</height>
+               </size>
+              </property>
              </widget>
             </item>
             <item row="1" column="1">
@@ -954,5 +964,22 @@ color: rgb(255, 215, 0);</string>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>pushButton_close</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>close()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>821</x>
+     <y>743</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>488</x>
+     <y>408</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
