--- a/ui/New_reservationMainWindow.ui
+++ b/ui/New_reservationMainWindow.ui
@@ -25,9 +25,9 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>30</x>
+      <x>250</x>
       <y>30</y>
-      <width>551</width>
+      <width>331</width>
       <height>111</height>
      </rect>
     </property>
@@ -618,6 +618,29 @@ color: rgb(0, 0, 0);
     </property>
     <property name="text">
      <string>Clear</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_11">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>30</y>
+      <width>221</width>
+      <height>111</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 75 20pt &quot;#9Slide03 SFU Toledo Bold&quot;;
+background-color: rgb(255, 255, 255);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap>../images/logo hotel.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
     </property>
    </widget>
   </widget>
