--- a/ui/LoginMainWindow.ui
+++ b/ui/LoginMainWindow.ui
@@ -17,24 +17,24 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>280</x>
-      <y>180</y>
-      <width>311</width>
-      <height>51</height>
+      <x>190</x>
+      <y>190</y>
+      <width>501</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>#9Slide03 SFU Toledo Bold</family>
-      <pointsize>25</pointsize>
+      <pointsize>40</pointsize>
       <weight>9</weight>
       <italic>false</italic>
       <bold>false</bold>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: 20pt &quot;#9Slide04 Prata&quot;;
-font: 75 25pt &quot;#9Slide03 SFU Toledo Bold&quot;;
+     <string notr="true">font: 30pt &quot;#9Slide04 Prata&quot;;
+font: 75 40pt &quot;#9Slide03 SFU Toledo Bold&quot;;
 color: rgb(128, 0, 2);</string>
     </property>
     <property name="text">
@@ -47,64 +47,82 @@ color: rgb(128, 0, 2);</string>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>250</y>
-      <width>101</width>
+      <x>130</x>
+      <y>280</y>
+      <width>131</width>
       <height>31</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <family>#9Slide03 SFU Toledo Bold</family>
+      <pointsize>25</pointsize>
+      <weight>9</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+     </font>
+    </property>
     <property name="styleSheet">
-     <string notr="true">font: 75 20pt &quot;#9Slide03 SFU Toledo Bold&quot;;
-color: rgb(64, 0, 128);
+     <string notr="true">font: 75 25pt &quot;#9Slide03 SFU Toledo Bold&quot;;
+color: rgb(255, 255, 255);
 </string>
     </property>
     <property name="text">
      <string>User Name:</string>
     </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
    </widget>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>300</y>
+      <x>110</x>
+      <y>330</y>
       <width>101</width>
-      <height>21</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: 75 20pt &quot;#9Slide03 SFU Toledo Bold&quot;;
-color: rgb(64, 0, 128);
+     <string notr="true">font: 75 25pt &quot;#9Slide03 SFU Toledo Bold&quot;;
+color: rgb(255, 255, 255);
 </string>
     </property>
     <property name="text">
      <string>Role:</string>
     </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
    </widget>
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>340</y>
-      <width>101</width>
-      <height>21</height>
+      <x>130</x>
+      <y>370</y>
+      <width>111</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: 75 20pt &quot;#9Slide03 SFU Toledo Bold&quot;;
-color: rgb(64, 0, 128);
+     <string notr="true">font: 75 25pt &quot;#9Slide03 SFU Toledo Bold&quot;;
+color: rgb(255, 255, 255);
 </string>
     </property>
     <property name="text">
      <string>Password:</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
    <widget class="QLineEdit" name="lineEditUserName">
     <property name="geometry">
      <rect>
       <x>270</x>
-      <y>260</y>
-      <width>341</width>
-      <height>21</height>
+      <y>270</y>
+      <width>351</width>
+      <height>41</height>
      </rect>
     </property>
    </widget>
@@ -112,37 +130,19 @@ color: rgb(64, 0, 128);
     <property name="geometry">
      <rect>
       <x>270</x>
-      <y>340</y>
-      <width>341</width>
-      <height>21</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QRadioButton" name="radioButtonSaveLogin">
-    <property name="geometry">
-     <rect>
-      <x>340</x>
       <y>380</y>
-      <width>171</width>
-      <height>31</height>
+      <width>351</width>
+      <height>41</height>
      </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">font: 75 20pt &quot;#9Slide03 SFU Toledo Bold&quot;;
-color: rgb(64, 0, 128);
-</string>
-    </property>
-    <property name="text">
-     <string>Save Login Infor</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButtonLogin">
     <property name="geometry">
      <rect>
       <x>240</x>
-      <y>430</y>
-      <width>121</width>
-      <height>41</height>
+      <y>450</y>
+      <width>141</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -156,10 +156,10 @@ color: rgb(128, 0, 2);</string>
    <widget class="QPushButton" name="pushButtonExit">
     <property name="geometry">
      <rect>
-      <x>490</x>
-      <y>430</y>
-      <width>121</width>
-      <height>41</height>
+      <x>500</x>
+      <y>450</y>
+      <width>131</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -173,10 +173,10 @@ color: rgb(128, 0, 2);</string>
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>360</x>
+      <x>350</x>
       <y>10</y>
-      <width>151</width>
-      <height>151</height>
+      <width>181</width>
+      <height>181</height>
      </rect>
     </property>
     <property name="text">
@@ -196,12 +196,42 @@ color: rgb(128, 0, 2);</string>
     <property name="geometry">
      <rect>
       <x>270</x>
-      <y>300</y>
-      <width>341</width>
-      <height>26</height>
+      <y>320</y>
+      <width>351</width>
+      <height>61</height>
      </rect>
     </property>
    </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>821</width>
+      <height>561</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap>../images/hotel.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <zorder>label_6</zorder>
+   <zorder>label</zorder>
+   <zorder>label_2</zorder>
+   <zorder>label_3</zorder>
+   <zorder>label_4</zorder>
+   <zorder>lineEditUserName</zorder>
+   <zorder>lineEditPassword</zorder>
+   <zorder>pushButtonLogin</zorder>
+   <zorder>pushButtonExit</zorder>
+   <zorder>label_5</zorder>
+   <zorder>comboBoxRole</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -216,5 +246,22 @@ color: rgb(128, 0, 2);</string>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>pushButtonExit</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>close()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>525</x>
+     <y>514</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>406</x>
+     <y>299</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
