--- a/ui/LoginMainWindow.ui
+++ b/ui/LoginMainWindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>814</width>
-    <height>600</height>
+    <width>1065</width>
+    <height>719</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,16 +17,16 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>190</x>
-      <y>190</y>
-      <width>501</width>
+      <x>210</x>
+      <y>220</y>
+      <width>711</width>
       <height>61</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>#9Slide03 SFU Toledo Bold</family>
-      <pointsize>40</pointsize>
+      <pointsize>30</pointsize>
       <weight>9</weight>
       <italic>false</italic>
       <bold>false</bold>
@@ -34,7 +34,7 @@
     </property>
     <property name="styleSheet">
      <string notr="true">font: 30pt &quot;#9Slide04 Prata&quot;;
-font: 75 40pt &quot;#9Slide03 SFU Toledo Bold&quot;;
+font: 75 30pt &quot;#9Slide03 SFU Toledo Bold&quot;;
 color: rgb(128, 0, 2);</string>
     </property>
     <property name="text">
@@ -47,23 +47,23 @@ color: rgb(128, 0, 2);</string>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>280</y>
-      <width>131</width>
+      <x>160</x>
+      <y>350</y>
+      <width>221</width>
       <height>31</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>#9Slide03 SFU Toledo Bold</family>
-      <pointsize>25</pointsize>
+      <pointsize>20</pointsize>
       <weight>9</weight>
       <italic>false</italic>
       <bold>false</bold>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: 75 25pt &quot;#9Slide03 SFU Toledo Bold&quot;;
+     <string notr="true">font: 75 20pt &quot;#9Slide03 SFU Toledo Bold&quot;;
 color: rgb(255, 255, 255);
 </string>
     </property>
@@ -77,14 +77,23 @@ color: rgb(255, 255, 255);
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>330</y>
+      <x>170</x>
+      <y>430</y>
       <width>101</width>
       <height>31</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <family>#9Slide03 SFU Toledo Bold</family>
+      <pointsize>20</pointsize>
+      <weight>9</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+     </font>
+    </property>
     <property name="styleSheet">
-     <string notr="true">font: 75 25pt &quot;#9Slide03 SFU Toledo Bold&quot;;
+     <string notr="true">font: 75 20pt &quot;#9Slide03 SFU Toledo Bold&quot;;
 color: rgb(255, 255, 255);
 </string>
     </property>
@@ -98,14 +107,23 @@ color: rgb(255, 255, 255);
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>370</y>
-      <width>111</width>
+      <x>160</x>
+      <y>490</y>
+      <width>201</width>
       <height>51</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <family>#9Slide03 SFU Toledo Bold</family>
+      <pointsize>20</pointsize>
+      <weight>9</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+     </font>
+    </property>
     <property name="styleSheet">
-     <string notr="true">font: 75 25pt &quot;#9Slide03 SFU Toledo Bold&quot;;
+     <string notr="true">font: 75 20pt &quot;#9Slide03 SFU Toledo Bold&quot;;
 color: rgb(255, 255, 255);
 </string>
     </property>
@@ -119,8 +137,8 @@ color: rgb(255, 255, 255);
    <widget class="QLineEdit" name="lineEditUserName">
     <property name="geometry">
      <rect>
-      <x>270</x>
-      <y>270</y>
+      <x>400</x>
+      <y>350</y>
       <width>351</width>
       <height>41</height>
      </rect>
@@ -129,18 +147,24 @@ color: rgb(255, 255, 255);
    <widget class="QLineEdit" name="lineEditPassword">
     <property name="geometry">
      <rect>
-      <x>270</x>
-      <y>380</y>
+      <x>400</x>
+      <y>500</y>
       <width>351</width>
       <height>41</height>
      </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="echoMode">
+     <enum>QLineEdit::Password</enum>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButtonLogin">
     <property name="geometry">
      <rect>
-      <x>240</x>
-      <y>450</y>
+      <x>310</x>
+      <y>580</y>
       <width>141</width>
       <height>61</height>
      </rect>
@@ -156,8 +180,8 @@ color: rgb(128, 0, 2);</string>
    <widget class="QPushButton" name="pushButtonExit">
     <property name="geometry">
      <rect>
-      <x>500</x>
-      <y>450</y>
+      <x>640</x>
+      <y>580</y>
       <width>131</width>
       <height>61</height>
      </rect>
@@ -173,10 +197,10 @@ color: rgb(128, 0, 2);</string>
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>350</x>
+      <x>420</x>
       <y>10</y>
-      <width>181</width>
-      <height>181</height>
+      <width>251</width>
+      <height>201</height>
      </rect>
     </property>
     <property name="text">
@@ -195,10 +219,10 @@ color: rgb(128, 0, 2);</string>
    <widget class="QComboBox" name="comboBoxRole">
     <property name="geometry">
      <rect>
-      <x>270</x>
-      <y>320</y>
+      <x>400</x>
+      <y>420</y>
       <width>351</width>
-      <height>61</height>
+      <height>51</height>
      </rect>
     </property>
    </widget>
@@ -206,10 +230,15 @@ color: rgb(128, 0, 2);</string>
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>0</y>
-      <width>821</width>
-      <height>561</height>
+      <y>-20</y>
+      <width>1071</width>
+      <height>691</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>21</pointsize>
+     </font>
     </property>
     <property name="text">
      <string/>
@@ -238,8 +267,8 @@ color: rgb(128, 0, 2);</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>814</width>
-     <height>24</height>
+     <width>1065</width>
+     <height>26</height>
     </rect>
    </property>
   </widget>
