--- a/ui/MainWindowRoomManagement.ui
+++ b/ui/MainWindowRoomManagement.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1023</width>
-    <height>742</height>
+    <height>884</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -24,9 +24,9 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>180</y>
+      <y>340</y>
       <width>1001</width>
-      <height>411</height>
+      <height>291</height>
      </rect>
     </property>
     <property name="sizePolicy">
@@ -96,7 +96,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>80</y>
+      <y>240</y>
       <width>581</width>
       <height>91</height>
      </rect>
@@ -213,8 +213,8 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0.527
    <widget class="QPushButton" name="pushButton_checkin">
     <property name="geometry">
      <rect>
-      <x>270</x>
-      <y>610</y>
+      <x>180</x>
+      <y>700</y>
       <width>141</width>
       <height>51</height>
      </rect>
@@ -243,8 +243,8 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0.527
    <widget class="QPushButton" name="pushButton_checkout">
     <property name="geometry">
      <rect>
-      <x>430</x>
-      <y>610</y>
+      <x>450</x>
+      <y>700</y>
       <width>151</width>
       <height>51</height>
      </rect>
@@ -273,8 +273,8 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0.527
    <widget class="QPushButton" name="pushButton_exit">
     <property name="geometry">
      <rect>
-      <x>600</x>
-      <y>610</y>
+      <x>720</x>
+      <y>700</y>
       <width>131</width>
       <height>51</height>
      </rect>
@@ -303,9 +303,9 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0.527
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>660</x>
-      <y>120</y>
-      <width>71</width>
+      <x>610</x>
+      <y>280</y>
+      <width>91</width>
       <height>31</height>
      </rect>
     </property>
@@ -322,11 +322,30 @@ color: rgb(0, 0, 0);
    <widget class="QDateEdit" name="dateEdit_date">
     <property name="geometry">
      <rect>
-      <x>730</x>
-      <y>120</y>
+      <x>710</x>
+      <y>270</y>
       <width>271</width>
-      <height>31</height>
+      <height>51</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>10</y>
+      <width>951</width>
+      <height>241</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap>../images/Cover.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
     </property>
    </widget>
   </widget>
@@ -336,7 +355,7 @@ color: rgb(0, 0, 0);
      <x>0</x>
      <y>0</y>
      <width>1023</width>
-     <height>22</height>
+     <height>26</height>
     </rect>
    </property>
   </widget>
