--- a/ui/HomePageMainWindow.ui
+++ b/ui/HomePageMainWindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>963</width>
-    <height>798</height>
+    <width>1097</width>
+    <height>775</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,190 +17,71 @@
    <double>2.000000000000000</double>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="pushButtonNext">
-    <property name="geometry">
-     <rect>
-      <x>780</x>
-      <y>680</y>
-      <width>161</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>#9Slide03 SFU Toledo Bold</family>
-      <pointsize>20</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background-color: rgb(255, 255, 255,80);</string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="icon">
-     <iconset>
-      <normaloff>../images/next.png</normaloff>../images/next.png</iconset>
-    </property>
-    <property name="iconSize">
-     <size>
-      <width>100</width>
-      <height>100</height>
-     </size>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButtonBack">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>680</y>
-      <width>161</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>#9Slide03 SFU Toledo Bold</family>
-      <pointsize>20</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background-color: rgb(255, 255, 255,80);</string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="icon">
-     <iconset>
-      <normaloff>../images/back.png</normaloff>../images/back.png</iconset>
-    </property>
-    <property name="iconSize">
-     <size>
-      <width>100</width>
-      <height>100</height>
-     </size>
-    </property>
-   </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>10</y>
-      <width>951</width>
-      <height>761</height>
+      <x>-6</x>
+      <y>-5</y>
+      <width>1101</width>
+      <height>721</height>
      </rect>
     </property>
     <property name="text">
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>../images/HomePage.jpg</pixmap>
+     <pixmap>../images/homepage.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QGroupBox" name="groupBox">
+   <widget class="QPushButton" name="pushButtonAboutUs">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>20</y>
-      <width>391</width>
-      <height>641</height>
+      <y>440</y>
+      <width>161</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QGroupBox {
-;
-	background-color: rgb(0, 0, 0,100);
-    border-radius: 15px;        /* Bo góc */
-    margin-top: 15px;           /* Tạo khoảng trống cho tiêu đề */
-    padding: 10px;
-}</string>
-    </property>
-    <property name="title">
-     <string/>
-    </property>
-    <widget class="QLabel" name="label_2">
-     <property name="geometry">
-      <rect>
-       <x>40</x>
-       <y>150</y>
-       <width>331</width>
-       <height>471</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-color: rgb(0, 0, 0,100);
+     <string notr="true">
+background-color: transparent;
 color: rgb(255, 255, 255);
-font: 12pt &quot;Times New Roman&quot;;</string>
-     </property>
-     <property name="text">
-      <string>At D'anteria Exclusive, the golden beaches and sparking waters of Main Beach and Gold Coast Broadwater are right at your fingertips. Enjoy the holiday glow that radiates throughout the city which boasts one of the world's best coastlines and a delightful climate all year round. Located in the premier playground of blue-water yachting, magnificent fishing and diving, surfing, world-class golfing, tennis, or simply relaxing on the golden sand beaches, the opportunities for adventure and relaxation are endless.</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignCenter</set>
-     </property>
-     <property name="wordWrap">
-      <bool>true</bool>
-     </property>
-    </widget>
-    <widget class="QLabel" name="logo">
-     <property name="geometry">
-      <rect>
-       <x>120</x>
-       <y>20</y>
-       <width>151</width>
-       <height>121</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="pixmap">
-      <pixmap>../images/logo hotel.png</pixmap>
-     </property>
-     <property name="scaledContents">
-      <bool>true</bool>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_3">
-     <property name="geometry">
-      <rect>
-       <x>80</x>
-       <y>130</y>
-       <width>211</width>
-       <height>101</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">color: rgb(255, 227, 126);
-font: 75 22pt &quot;#9Slide03 SFU Toledo Bold&quot;;
-background-color: transparent</string>
-     </property>
-     <property name="text">
-      <string>About Us</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignCenter</set>
-     </property>
-    </widget>
+font: 63 14pt &quot;Sitka Heading Semibold&quot;;
+</string>
+    </property>
+    <property name="text">
+     <string>About Us</string>
+    </property>
    </widget>
-   <zorder>label</zorder>
-   <zorder>pushButtonNext</zorder>
-   <zorder>pushButtonBack</zorder>
-   <zorder>groupBox</zorder>
+   <widget class="QPushButton" name="pushButtonLogIn">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>500</y>
+      <width>181</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">
+background-color: transparent;
+color: rgb(255, 255, 255);
+font: 63 14pt &quot;Sitka Heading Semibold&quot;;</string>
+    </property>
+    <property name="text">
+     <string>Log In</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>963</width>
+     <width>1097</width>
      <height>26</height>
     </rect>
    </property>
