--- a/ui/LoginMainWindow.ui
+++ b/ui/LoginMainWindow.ui
@@ -25,7 +25,7 @@
     </property>
     <property name="styleSheet">
      <string notr="true">QGroupBox {
-    background-color: rgba(0, 0, 0, 80);  /* Màu nền semi-transparent */
+    background-color: rgba(0, 0, 0, 120);  /* Màu nền semi-transparent */
     border-radius: 15px;  /* Bo góc */
     margin-top: 10px;  /* Khoảng cách giữa tiêu đề và groupbox */
     padding: 10px;  /* Khoảng cách nội dung bên trong */
@@ -271,7 +271,7 @@ font: 13pt &quot;Times New Roman&quot;;</string>
     <widget class="QPushButton" name="pushButtonLogin">
      <property name="geometry">
       <rect>
-       <x>240</x>
+       <x>390</x>
        <y>530</y>
        <width>141</width>
        <height>61</height>
@@ -289,7 +289,7 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0.527
     <widget class="QPushButton" name="pushButtonExit">
      <property name="geometry">
       <rect>
-       <x>580</x>
+       <x>670</x>
        <y>530</y>
        <width>131</width>
        <height>61</height>
@@ -302,6 +302,24 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0.527
      </property>
      <property name="text">
       <string>Exit</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButtonBack">
+     <property name="geometry">
+      <rect>
+       <x>90</x>
+       <y>530</y>
+       <width>141</width>
+       <height>61</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">font: 75 20pt &quot;#9Slide03 SFU Toledo Bold&quot;;
+color: rgb(255, 232, 137);
+background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0.527363 rgba(80, 11, 40, 255), stop:1 rgba(187, 23, 43, 255));</string>
+     </property>
+     <property name="text">
+      <string>Back</string>
      </property>
     </widget>
    </widget>
@@ -318,7 +336,7 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0.527
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>../images/LoginPic.jpg</pixmap>
+     <pixmap>../images/login.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
