--- a/ui/MainWindowBookingManagement.ui
+++ b/ui/MainWindowBookingManagement.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1318</width>
-    <height>762</height>
+    <width>1280</width>
+    <height>780</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>1280</width>
+    <height>780</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>1280</width>
+    <height>780</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string> K24411E</string>
@@ -22,9 +34,21 @@
      <rect>
       <x>0</x>
       <y>250</y>
-      <width>501</width>
-      <height>461</height>
+      <width>1280</width>
+      <height>780</height>
      </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>1280</width>
+      <height>780</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>1280</width>
+      <height>780</height>
+     </size>
     </property>
     <property name="font">
      <font>
@@ -86,9 +110,9 @@ hover {
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>130</y>
+       <y>150</y>
        <width>151</width>
-       <height>31</height>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
@@ -111,7 +135,7 @@ hover {
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>180</y>
+       <y>200</y>
        <width>151</width>
        <height>31</height>
       </rect>
@@ -136,7 +160,7 @@ hover {
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>230</y>
+       <y>240</y>
        <width>151</width>
        <height>31</height>
       </rect>
@@ -161,9 +185,9 @@ hover {
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>280</y>
-       <width>191</width>
-       <height>31</height>
+       <y>270</y>
+       <width>101</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
@@ -179,16 +203,16 @@ hover {
       <string notr="true">background-color: transparent; border:transparent;</string>
      </property>
      <property name="text">
-      <string>Available Room :</string>
+      <string>Identify :</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_12">
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>320</y>
-       <width>191</width>
-       <height>31</height>
+       <y>110</y>
+       <width>81</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
@@ -204,14 +228,14 @@ hover {
       <string notr="true">background-color: transparent; border:transparent;</string>
      </property>
      <property name="text">
-      <string>Number of days :</string>
+      <string>Phone :</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButtonClear_3">
+    <widget class="QPushButton" name="pushButtonUpdate">
      <property name="geometry">
       <rect>
-       <x>30</x>
-       <y>400</y>
+       <x>40</x>
+       <y>440</y>
        <width>91</width>
        <height>51</height>
       </rect>
@@ -257,11 +281,11 @@ QPushButton:pressed {
       <string>Update</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButtonClear_4">
+    <widget class="QPushButton" name="pushButtonDelete">
      <property name="geometry">
       <rect>
-       <x>180</x>
-       <y>400</y>
+       <x>190</x>
+       <y>440</y>
        <width>91</width>
        <height>51</height>
       </rect>
@@ -307,11 +331,11 @@ QPushButton:pressed {
       <string>Delete</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButtonClear_5">
+    <widget class="QPushButton" name="pushButtonReset">
      <property name="geometry">
       <rect>
-       <x>330</x>
-       <y>400</y>
+       <x>340</x>
+       <y>440</y>
        <width>101</width>
        <height>51</height>
       </rect>
@@ -360,10 +384,10 @@ QPushButton:pressed {
     <widget class="QLabel" name="label_14">
      <property name="geometry">
       <rect>
-       <x>170</x>
+       <x>180</x>
        <y>30</y>
        <width>321</width>
-       <height>351</height>
+       <height>391</height>
       </rect>
      </property>
      <property name="font">
@@ -393,128 +417,18 @@ QWidget:hover {
       <string/>
      </property>
      <property name="pixmap">
-      <pixmap>../images/HomePage.jpg</pixmap>
+      <pixmap>../images/booking.jpg</pixmap>
      </property>
      <property name="scaledContents">
       <bool>true</bool>
      </property>
-    </widget>
-    <widget class="QLineEdit" name="lineEdit">
-     <property name="geometry">
-      <rect>
-       <x>190</x>
-       <y>40</y>
-       <width>281</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">border: 2px solid transparent;
-background-color: rgb(255, 255, 255,200);
-color: rgb(0, 0, 0);</string>
-     </property>
-    </widget>
-    <widget class="QDateEdit" name="dateEdit">
-     <property name="geometry">
-      <rect>
-       <x>190</x>
-       <y>130</y>
-       <width>281</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">border: 2px solid transparent;
-background-color: rgb(255, 255, 255,200);
-color: rgb(0, 0, 0);</string>
-     </property>
-    </widget>
-    <widget class="QDateEdit" name="dateEdit_2">
-     <property name="geometry">
-      <rect>
-       <x>190</x>
-       <y>180</y>
-       <width>281</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">border: 2px solid transparent;
-background-color: rgb(255, 255, 255,200);
-color: rgb(0, 0, 0);</string>
-     </property>
-    </widget>
-    <widget class="QComboBox" name="comboBox_2">
-     <property name="geometry">
-      <rect>
-       <x>190</x>
-       <y>230</y>
-       <width>281</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">border: 2px solid transparent;
-background-color: rgb(255, 255, 255,200);
-color: rgb(0, 0, 0);</string>
-     </property>
-     <item>
-      <property name="text">
-       <string>Regular</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>VIP</string>
-      </property>
-     </item>
-    </widget>
-    <widget class="QComboBox" name="comboBox_3">
-     <property name="geometry">
-      <rect>
-       <x>190</x>
-       <y>280</y>
-       <width>281</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">border: 2px solid transparent;
-background-color: rgb(255, 255, 255,200);
-color: rgb(0, 0, 0);</string>
-     </property>
-     <item>
-      <property name="text">
-       <string>1</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>2</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>3</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>4</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>5</string>
-      </property>
-     </item>
     </widget>
     <widget class="QLineEdit" name="lineEdit_3">
      <property name="geometry">
       <rect>
        <x>190</x>
        <y>90</y>
-       <width>281</width>
+       <width>291</width>
        <height>31</height>
       </rect>
      </property>
@@ -557,8 +471,8 @@ color: rgb(0, 0, 0);</string>
      <property name="geometry">
       <rect>
        <x>190</x>
-       <y>320</y>
-       <width>281</width>
+       <y>370</y>
+       <width>291</width>
        <height>31</height>
       </rect>
      </property>
@@ -568,13 +482,100 @@ background-color: rgb(255, 255, 255,200);
 color: rgb(0, 0, 0);</string>
      </property>
     </widget>
+    <widget class="QLineEdit" name="lineEdit_5">
+     <property name="geometry">
+      <rect>
+       <x>190</x>
+       <y>150</y>
+       <width>291</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border: 2px solid transparent;
+background-color: rgb(255, 255, 255,200);
+color: rgb(0, 0, 0);</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit_6">
+     <property name="geometry">
+      <rect>
+       <x>190</x>
+       <y>210</y>
+       <width>291</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border: 2px solid transparent;
+background-color: rgb(255, 255, 255,200);
+color: rgb(0, 0, 0);</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit_7">
+     <property name="geometry">
+      <rect>
+       <x>190</x>
+       <y>270</y>
+       <width>291</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border: 2px solid transparent;
+background-color: rgb(255, 255, 255,200);
+color: rgb(0, 0, 0);</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit_8">
+     <property name="geometry">
+      <rect>
+       <x>190</x>
+       <y>320</y>
+       <width>291</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border: 2px solid transparent;
+background-color: rgb(255, 255, 255,200);
+color: rgb(0, 0, 0);</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit_9">
+     <property name="geometry">
+      <rect>
+       <x>190</x>
+       <y>40</y>
+       <width>291</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border: 2px solid transparent;
+background-color: rgb(255, 255, 255,200);
+color: rgb(0, 0, 0);</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
    </widget>
    <widget class="QGroupBox" name="groupBoxListProduct">
     <property name="geometry">
      <rect>
-      <x>500</x>
+      <x>490</x>
       <y>250</y>
-      <width>831</width>
+      <width>781</width>
       <height>461</height>
      </rect>
     </property>
@@ -731,8 +732,8 @@ color: rgb(0, 0, 0);</string>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>-50</x>
-      <y>0</y>
+      <x>-70</x>
+      <y>-30</y>
       <width>1361</width>
       <height>311</height>
      </rect>
@@ -898,7 +899,7 @@ background-color: rgb(255, 255, 255);</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1318</width>
+     <width>1280</width>
      <height>26</height>
     </rect>
    </property>
